rendered/envs/alpha/vmks/ingressroute-vmsingle-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vmsingle-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`vmsingle.lan.zebradil.dev`) || Host(`vmsingle.gray.lan.zebradil.dev`) || Host(`vmsingle.junior.lan.zebradil.dev`)
      services:
        - name: vmsingle-vmks
          port: http
